--- a/en.html
+++ b/en.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
